--- a/plugin.xml
+++ b/plugin.xml
@@ -4,7 +4,7 @@
  	<a href="http://www.mychacra.net">Rainer Müller</a>
 	</auteur>
 	<version>
-	0.2.0
+	0.2.1
 	</version>
 	<etat>
 	test
@@ -13,16 +13,9 @@
 	Différents adaptions pour Muzikpublique
 	</description>
 	<prefix>mp</prefix>
-<!-- 	<pipeline>
-		<nom>porte_plume_barre_pre_charger</nom>
-		<inclure>mp_pipelines.php</inclure>
-	</pipeline>-->
-<!--	<pipeline>
-		<nom>porte_plume_lien_classe_vers_icone</nom>
-		<inclure>mp_pipelines.php</inclure>
-	</pipeline>-->
+
 	<pipeline>
-		<nom>formulaire_traiter</nom>
+		<nom>formulaire_charger</nom>
 		<inclure>mp_pipelines.php</inclure>
 	</pipeline>
 	<necessite id="cfg" version='[1.16.0;]'/>	
